# tongyun-planner

./: ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.en.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.opencode/skills/qiyun-todo/: SKILL.md
screenshots/: README.md
scripts/: upload_to_gitee.js
src/: App.tsx  constants.ts  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: email.rs  lib.rs  main.rs
src/components/: AnalyticsView.tsx  CalendarView.tsx  CelebrationOverlay.tsx  CommandPalette.tsx  CompletedView.tsx  CountdownView.tsx  CustomSelect.tsx  DashboardView.tsx  ExploreView.tsx  FloatingNoteWindow.tsx  FlowMode.tsx  FocusHeatmap.tsx  GanttView.tsx  HabitsView.tsx  JournalView.tsx  ListView.tsx  MatrixView.tsx  MoodView.tsx  NewsView.tsx  PersonalizationView.tsx  QuickAddTask.tsx  SettingsView.tsx  Sidebar.tsx  StickyNotesView.tsx  StickyPin.tsx  SwipeCard.tsx  TaskDetailModal.tsx  TitleBar.tsx  WidgetWindow.tsx
src/components/news/: BookmarksView.tsx  GitHubView.tsx  NewsItemActions.tsx  RSSView.tsx  ReadingOverlay.tsx  TrendingView.tsx  newsActions.ts  rssParser.ts  types.ts
src/context/: PersonalContext.tsx  PomodoroContext.ts
src/hooks/: useAI.ts  useCountdown.ts  useCustomization.ts  useDebouncedPersistence.ts  usePomodoro.ts  useStickyNotes.ts  useSync.ts  useTasks.ts  useWidget.ts
src/i18n/: LanguageContext.tsx  en.ts  types.ts  zh-CN.ts
src/types/: cos-js-sdk-v5.d.ts
src/utils/: aiEngine.ts  audioEngine.ts  cache.ts  date.ts  dateParser.ts  id.ts  journalMarkdown.tsx  json.ts  openExternal.ts  rrule.ts  storage.ts  webdav.ts
src/utils/storage/: cosProvider.ts  index.ts  localProvider.ts  manager.ts  ossProvider.ts  supabaseProvider.ts  types.ts  webdavProvider.ts
src/utils/sync/: engine.ts  supabaseProvider.ts  types.ts  webdavProvider.ts
