[package]
name = "aerotodo"
version = "0.1.0"
description = "AeroTodo - Minimalist Dual Window Todo App"
authors = ["you"]
edition = "2021"

[lib]
name = "aerotodo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

