[package]
name = "tongyun-planner"
version = "0.1.0"
description = "TongYun Planner - Eisenhower matrix todo desktop app"
authors = ["TongYun Planner contributors"]
edition = "2021"

[lib]
name = "tongyun_planner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
base64 = "0.22"

